# meichu-web

./: README.md  docker-compose.yml
backend/: .env  .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  test.py  testing.sh
backend/controller/: admin.py  main.py  pos.py  root.py  user_auth.py
backend/model/: models.py
backend/monthly_report/: monthly_report_template.csv  payment_report_template.csv
backend/route/: routes.py
backend/tests/: conftest.py  test_admin.py  test_login.py  test_main.py  test_pos.py
db/: init.sql
frontend/: .env.base  .env.dev  .env.gitee  .env.pro  .env.test  Dockerfile  LICENSE  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.mts  vitest.config.js
frontend/conf.d/: vite.conf
frontend/mock/analysis/: index.mock.ts
frontend/mock/menu/: index.mock.ts
frontend/mock/role/: index.mock.ts
frontend/mock/table/: index.mock.ts
frontend/mock/user/: index.mock.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AddMealDialog.vue  AddRestaurantDialog.vue  AdminSidebar.vue  DeleteMealDialog.vue  EditMealDialog.vue  ErrorDialog.vue  OrderDetailDialog.vue  RateOrderDialog.vue  RestaurantSidebar.vue  SideBar.vue  SuccessAlert.vue  WarningDialog.vue  WorkerSidebar.vue  (+1 more)
frontend/test/: service.test.ts
k8s/: configmap.yaml  deployments.yaml  ingress.yaml  ingressroutes.yml  kube_metric.yaml  persistent-volume-claim.yaml  services.yaml  storageclass.yaml
k8s/crd/: kubernetes-crd-rbac.yml
(+56 files in other folders)
